# phys417

./: .gitignore  pyproject.toml
Lab1/: Lab1_Report_Template.html  Lab1_Report_Template.ipynb
Lab2/: Lab2_Lando_Josh.html  Lab2_Lando_Josh.ipynb
Lab3/: Lab_3_JoshLando.html  Lab_3_JoshLando.ipynb  model_snippet.ipynb
Lab4/: Lab4_LandoJosh.html  Lab4_LandoJosh.ipynb
Lab4_Example/: Lab4_Example.ipynb
Lab5_Examples/: Lab5_Example.ipynb
Lab5_Examples/wandb/: latest-run
Lab5_Examples/wandb/run-20260430_145227-lszx9xjs/: run-lszx9xjs.wandb
Lab5_Examples/wandb/run-20260430_145227-lszx9xjs/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
Lab5_Template/: Lab5_LandoJosh.ipynb  Lab5_Template.html  Lab5_Template.ipynb
Lab6/: Lab6_LandoJosh.ipynb
lab6-transformer/: Lab6_LandoJosh.ipynb
lab7-agnetic/: Lab7_Agentic_Workflow.ipynb
lab7-agnetic/.ipynb_checkpoints/: Lab7_Agentic_Workflow-checkpoint.ipynb
lab7-agnetic/agentic_lab7/: __init__.py  pipeline_setup.py  planning_tools.py
